--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* .showcase{
-  @apply font-semibold h-96 w-full bg-no-repeat bg-center text-white relative flex flex-col justify-center items-center text-center after:content-[''] after:absolute after:top-0 after:left-0 after:w-full after:h-full after:bg-black after:bg-opacity-70
+.mobileNav{
+  @apply md:hidden absolute right-8 top-16 w-32 bg-white rounded-lg overflow-hidden justify-center items-center flex transition-all duration-500 ease-in-out
 }
-.showcase *{
-  @apply z-20
-} */
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
